# envlog2

./: .gitignore  Cargo.toml
env-logger/: Cargo.toml  build.rs
env-logger/data/: create_table.sql  insert_record.sql
env-logger/misc/: env-logger2.service
env-logger/src/: database.rs  main.rs  record.rs
env-logger/src/cmd_args/: mod.rs
env-logger/src/receiver/: mod.rs  tcp.rs  udp.rs
sensor/atoms3+env.iii/: mktags.sh  platformio.ini
sensor/atoms3+env.iii/src/: main.ino
shared_build/: Cargo.toml
shared_build/src/: lib.rs
