[package]
name = "env-logger"
edition = "2021"
build = "build.rs"

version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
anyhow = "1.0.95"
log = "0.4.22"
flexi_logger = "0.29.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.39"
rhexdump = "0.2.0"

[build-dependencies]
shared_build = { path = "../shared_build" }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
